added first page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
+
 <title>Heila Al-Mogren</title>
 </head>
 <body>
+    <div class="first part">
 
-<h1>Hi</h1>
-<p>My name is heila</p>
+    
+    <div class="axis_box">
+    <div class="main_ax">
+        <p  class="hi">
+            Hi, I'm
+        </p>
+    </div>
+    <div class="main_ax">
+        <p class="heila">
+            Heila Al-Mogren,
+        </p>
+    </div>
+    <div class="main_ax">
+        <p class="intro">
+            a web developer and a senior Software Engineering student <br> at King Saud University. 
+        </p>
+    </div>
+    <div class="main_ax">
+        <p class="bio">
+            My learning interests include web - specifically backend development, API's, database systems and servers. I'm passionate about computer networks and willing to continue research in this field one day.  And to achieve my learning goals, I gained Udacity Full Stack  Development Nano Degree and aiming to improve my skills by working on enriching projects.
+        </p>
+    </div>
+</div>
+</div>
+<!-- <div class="second part">
+hi
+</div> -->
+
 
 </body>
 </html>
