--- a/templates/index.html
+++ b/templates/index.html
@@ -42,10 +42,11 @@
                     <a href="https://discord.com/users/7766/">
                     <img src="{{url_for('static', filename='social_icons/discord.svg')}}" alt="discord icon" class="social_icon"></a>
                     &nbsp;
-                    <a href=""></a>
-                    <img src="{{url_for('static', filename='social_icons/linkedin.svg')}}" alt="linkedin icon" class="social_icon">
+                    <a href="https://www.linkedin.com/in/heila-almogren/">
+                    <img src="{{url_for('static', filename='social_icons/linkedin.svg')}}" alt="linkedin icon" class="social_icon"></a>
                     &nbsp;
-                    <img src="{{url_for('static', filename='social_icons/wikipedia.svg')}}" alt="wikipedia icon" class="social_icon">
+                    <a href="https://ar.wikipedia.org/wiki/%D9%85%D8%B3%D8%AA%D8%AE%D8%AF%D9%85:Heila_Al-Mogren">
+                    <img src="{{url_for('static', filename='social_icons/wikipedia.svg')}}" alt="wikipedia icon" class="social_icon"></a>
                 </td>
             </tr>
         </table>
