added preview image

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='iconfinder_letter_H_blue_1553057.ico')}}" />
 
 <title>Heila Al-Mogren</title>
+<meta name="image" property="og:image" content="{{url_for('static', filename='preview.png')}}">
 </head>
 <body>
 <div class="frame">
