--- a/src/app/main-description/main-description.component.html
+++ b/src/app/main-description/main-description.component.html
@@ -6,7 +6,7 @@
 
   <div class="description">
     <ul>
-      <li>I graduated with a software engineering degree from KSU in Jan 2021.</li>
+      <li>I graduated with a software engineering degree from KSU in Jan 2022.</li>
       <li>I’m obsessed of a mix of things that do not usually get together:
         JavaScript, philosophy, helicopters, mountains, future schools,
         computer networks, and finally (and most importantly) Hawaiian pizza :)
@@ -18,7 +18,7 @@
         &nbsp; Let's talk {{catFace}}
       </button>
 
-      <button routerLink="/resume" class="btn viewResume" (mouseover)="catLaugh()" (mouseout)="catSmile()">
+      <button routerLink="/resume" class="btn viewResume">
         View Resume
       </button>
       <div class="social_icons">
