--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,7 @@
   <router-outlet #o="outlet"></router-outlet>
 </div>
 
-<app-made-with-love></app-made-with-love>
+<app-made-with-love style="clear: both;
+    position: relative;
+    height: 200px;
+    margin-top: -200px;"></app-made-with-love>
