--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,13 @@
 <div
   [@routeAnimations]="o && o.activatedRouteData
       && o.activatedRouteData['animation']"
-  style="height: 100%; border: solid 1px var(--background-color)">
+  style="border: solid 1px var(--background-color)">
   <router-outlet #o="outlet"></router-outlet>
 </div>
 
 <app-made-with-love style="clear: both;
     position: relative;
     height: 200px;
-    margin-top: -200px;"></app-made-with-love>
+    margin-top: -200px;">
+
+</app-made-with-love>
