--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div
   [@routeAnimations]="o && o.activatedRouteData
       && o.activatedRouteData['animation']"
-  style="border: solid 1px var(--background-color)">
+  style="min-height:90%; border: solid 1px var(--background-color)">
   <router-outlet #o="outlet"></router-outlet>
 </div>
 
