--- a/src/app/main-bar/main-bar.component.html
+++ b/src/app/main-bar/main-bar.component.html
@@ -1,6 +1,6 @@
 <div class="mainBarFrame">
 
-  <div class="title mainBarFrameItem">Heila Al-Mogren</div>
+  <app-name class="mainBarFrameItem"></app-name>
   <div class="menuItems mainBarFrameItem">
     <div class="menuItem" routerLink="/">Home</div>
     <div class="menuItem" routerLink="/about">About</div>
