--- a/src/app/main-description/main-description.component.html
+++ b/src/app/main-description/main-description.component.html
@@ -32,3 +32,9 @@
   </div>
 </div>
 
+<app-made-with-love style="clear: both;
+    position: relative;
+    height: 200px;
+    margin-top: -200px;">
+
+</app-made-with-love>
