--- a/src/app/under-construction/under-construction.component.html
+++ b/src/app/under-construction/under-construction.component.html
@@ -1,5 +1,5 @@
 
-<div style="color: white; font-size: 60px; margin: auto; width: 100%; text-align: center">
+<div style="color: var(--text-mono-color); font-size: 60px; margin: auto; width: 100%; text-align: center">
 
   🚧 <br> Under Construction
 </div>
