added projects + about

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,1 +1,59 @@
-<app-under-construction></app-under-construction>
+
+<div class="twenty_facts" style="margin: auto; width: 50%; min-width: 400px;">
+
+  <ol>
+    <div class="intro">
+      Circa 2012-2016, there was a trend of #20_facts_About_me where everyone was telling 20 lovely facts about themselves then mentioned the next person to do it..<br>
+       I never did it that time but it's never late to do so! Here we are:
+    </div>
+    <li>My favourite type of food is the one that mixes savory, sweet and sour flavors together 😋. It kinda -well,
+      pretty much-
+      reflects my personality 😁
+    </li>
+    <li>The wish I want to achieve before I die is flying a plane around a mountain 🛩, preferably a fall as Jimmie
+      Angel
+      did in 1933 :D
+    </li>
+    <li>Since being in middle school, I've been very concerned about education as my wheelchaired friend had to
+      homeschool
+      and school was unprepared for her status. It's one of my life missions to make education fair and with better
+      quality for everyone.
+    </li>
+    <li>My favourite novel genre is Dystopia 🦉. In general, I enjoy the symbolization and philosophy behind the story
+      more
+      than anything else in the novel 🔥
+    </li>
+    <li> I rarely rarely watch movies. Not being able to imagine the story by myself makes the idea of watching a
+      movie super boring to me 🌚.
+
+    </li>
+    <li>My favourite author is Alija Izetbegovic (MHRIP). I
+      respect him so much and really wish if I could've met him before he died 😞 <br>
+      <br>
+      <div class="img">
+        <img style="width: 70%;" src="https://pbs.twimg.com/media/DfR8eE9WAAE7Iag?format=jpg&name=medium" alt="">
+      </div>
+    </li>
+    <li>My brain cells horribly enjoy analysis and getting lost in chasing how things happen and I really love making up
+      crazy ways to solve problems. I'm a typical
+      <a href="https://www.16personalities.com/intp-personality" target="_blank">INTP</a>.
+    </li>
+    <li>To be continued..
+    </li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+
+  </ol>
+
+
+</div>
