--- a/src/app/mobile-menu/mobile-menu.component.html
+++ b/src/app/mobile-menu/mobile-menu.component.html
@@ -10,7 +10,7 @@
     <div class="menuItem" routerLink="/">Home</div>
     <div class="menuItem" routerLink="/about">About</div>
     <div class="menuItem" routerLink="/projects">Projects</div>
-    <div class="menuItem">Articles</div>
+    <div class="menuItem"><a href="https://heilaalmogren.wixsite.com/noncoders">Articles</a></div>
 
 
 
