--- a/src/app/main-description/main-description.component.html
+++ b/src/app/main-description/main-description.component.html
@@ -22,11 +22,15 @@
         View Resume
       </button>
       <div class="social_icons">
+        <a target="_blank" href="https://twitter.com/HRMogren">
         <img class="social_icon" src="https://img.icons8.com/color-glass/48/000000/twitter.png"/>
-
-        <img class="social_icon" src="https://img.icons8.com/color-glass/48/000000/linkedin.png"/>
-
-        <img class="social_icon" src="https://img.icons8.com/color-glass/48/000000/github-2.png"/>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/heila-almogren/">
+          <img class="social_icon" src="https://img.icons8.com/color-glass/48/000000/linkedin.png"/>
+        </a>
+        <a target="_blank" href="https://github.com/Heila-Almogren">
+        <img class="social_icon" src="https://img.icons8.com/color-glass/48/000000/github-2.png" />
+        </a>
       </div>
     </div>
   </div>
