--- a/src/app/main-description/main-description.component.html
+++ b/src/app/main-description/main-description.component.html
@@ -22,7 +22,7 @@
         View Resume
       </button>
       <div class="social_icons">
-        <a target="_blank" href="https://twitter.com/HRMogren">
+        <a target="_blank" href="https://twitter.com/iamdijki">
         <img class="social_icon" src="https://img.icons8.com/color-glass/48/000000/twitter.png"/>
         </a>
         <a target="_blank" href="https://www.linkedin.com/in/heila-almogren/">
